// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render icon 1`] = `
<div>
  <button
    aria-label="mlb"
    class="MuiButtonBase-root MuiToggleButton-root toggle-button-root-7"
    data-id="mlb"
    tabindex="0"
    type="button"
    value="mlb"
  >
    <span
      class="MuiToggleButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-10"
        data-id="IconElectricity"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2.85 11.1l-.85.6V16h-4v-2.3l-.85-.6A4.997 4.997 0 0 1 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 1.63-.8 3.16-2.15 4.1z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`It renders 1`] = `
<div>
  <button
    aria-label="Melbourne"
    class="MuiButtonBase-root MuiToggleButton-root toggle-button-root-1"
    data-id="mlb"
    tabindex="0"
    type="button"
    value="mlb"
  >
    <span
      class="MuiToggleButton-label"
    >
      Melbourne
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`It renders in selected state 1`] = `
<div>
  <button
    aria-label="Melbourne"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButton-root toggle-button-root-4 Mui-selected toggle-button-selected-5"
    data-id="mlb"
    tabindex="0"
    type="button"
    value="mlb"
  >
    <span
      class="MuiToggleButton-label"
    >
      Melbourne
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
